# local-agentic-document-speech-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assistant/: __init__.py  cli.py  config.py  main.py
assistant/adapters/: base.py  local_rule_based_adapter.py  mock_asr_adapter.py  mock_embedding_adapter.py  mock_llm_adapter.py  mock_ocr_adapter.py  mock_translation_adapter.py  real_whisper_adapter.py  tesseract_ocr_adapter.py  whisper_asr_adapter.py
assistant/agent/: executor.py  planner.py  prompts.py  response_schema.py  state.py
assistant/api/: app.py  routes_agent.py  routes_audio.py  routes_documents.py  routes_reports.py  schemas.py
assistant/evaluation/: cer_wer.py  field_accuracy.py  metrics.py  report_card.py
assistant/rag/: chunker.py  citations.py  index.py  retriever.py  schemas.py
assistant/storage/: artifact_store.py  document_store.py  local_store.py  paths.py
docs/: agent_workflow.md  architecture.md  evaluation_design.md  rag_design.md  roadmap.md  tool_calling.md
examples/: reference.json  sample_invoice.txt  sample_receipt.txt  sample_request.json  sample_transcript.txt  upload_sample_invoice.txt
tests/: test_agent_planner.py  test_api.py  test_asr_tool.py  test_chunking.py  test_cli.py  test_evaluation.py  test_ocr_tool.py  test_optional_dependencies.py  test_pdf_text_extraction.py  test_report_generation.py  test_resume_adapter.py  test_resume_update_workflow.py  test_retrieval.py  test_retrieval_scope.py  test_tool_registry.py
web/: app.js  index.html  styles.css
(+15 files in other folders)
