[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agentic-document-speech-assistant"
version = "0.1.0"
description = "Local-first agentic AI assistant for documents, speech, OCR, RAG, evaluation, and reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "typer>=0.12",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]
ocr = ["pytesseract", "Pillow"]
asr = ["openai-whisper"]
vectors = ["sentence-transformers", "faiss-cpu"]
pdf = ["PyMuPDF"]

[project.scripts]
local-agent = "assistant.cli:main"

[tool.setuptools.packages.find]
include = ["assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
